# spatio-temporal-DM

./: .gitignore  README.md  bash_command.md  data  main_diffae.py  notes.odt  oarscript.sh  oarscript_sample.sh  pyproject.toml  pyproject.toml.bak  requirements.txt  run_debug.sh  sync_from_cluster.sh  sync_to_cluster.sh  test.txt  test_config.yaml  testconfig.yaml  uv.lock.bak
LDAE/: .gitignore  Dockerfile  LICENSE  README.md  main_diffae.py  requirements.txt  run_cli.py
LDAE/config/: aekl.yaml  classification.yaml  starmen_diffae.yaml
LDAE/models/: disease_classifier.ckpt  semantic_mean.pt  semantic_std.pt
LDAE/notebooks/: tutorial.ipynb
LDAE/scripts/: compare.py  interpolation_evaluation.py  save_compressed_latent.py  save_model_weights.py  save_semantic_latent.py  train_manipulation.py
_outputs/parameter_convergence/: betas.csv  g.csv  mixing_matrix_0.csv  mixing_matrix_1.csv  nll_attach.csv  (+12 more)
configs/: diffae_repr_learn.yaml  ldae_pretrain.yaml  ldae_repr_learn.yaml  regression.yaml  sadm.yaml  starmen_diffae.yaml  starmen_diffae_dim4.yaml  starmen_fe_train.yaml  starmen_ldae.yaml  starmen_tadm.yaml
data/: starmen
figures/: compare-infer-hist.pdf_tex  figs-draw.odp  g19417.pdf_tex
notebooks/: interpolation.ipynb  ldae-analysis.ipynb  leaspy.ipynb  longitudinal_transformer.ipynb  maf.ipynb  oneclass-SVM.ipynb  run_debug_leaspy.py  sdm.ipynb  sem_enc_time_cond.ipynb  semantic_encoder.ipynb  starmen_data.ipynb  stochastic_encoder.ipynb  tutorial.ipynb  vivit.ipynb
outdirs/: x_gen_0.npy  x_gen_store_0.npy
utils/: dataset.py  test.ipynb  visualize.py
(+83 files in other folders)
